# co2-emission-calc-service

./: .env.example  Cargo.toml  README.md
src/: main.rs  startup.rs
src/api/: calculations.rs  mod.rs
src/config/: settings.rs
src/domain/: calculator.rs  client.rs  mod.rs  models.rs
src/tasks/: worker.rs
