[package]
name = "co2-emission-calc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
dotenv = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
serde_valid = "0.13"
thiserror = "1.0"
actix-web = "4.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
